--- a/Webpages/style.css
+++ b/Webpages/style.css
@@ -167,6 +167,13 @@ h2{
 }
 
 .frontpage h1{
+    font-weight: bold;
+    font-size: 50px;
+    letter-spacing: 15px;
+    filter: drop-shadow(-3px 5px 2px #c2c2c2);
+}
+
+.frontpage h2{
     margin: auto;
     width: 50%;
     padding: 10px;
@@ -335,6 +342,14 @@ h2{
 
 }  
 
+.jordan-athlete-intro h2{
+    margin-bottom: 100px;
+    font-weight: bold;
+    font-size: 50px;
+    letter-spacing: 15px;
+    filter: drop-shadow(-3px 5px 2px #9b9b9b);
+}
+
 .brand-athletes{
     display: flex;
     flex-wrap: wrap;
@@ -344,6 +359,21 @@ h2{
     text-align: center;
     margin-bottom: 100px;
 }
+
+#brand-athletes-2{
+    margin-top: 100px;
+    
+    
+}
+
+#brand-athletes-2 .brand-box{
+    height: 450px;
+    width: 300px;
+    object-fit: contain;
+
+
+}
+
 .brand-box{
     position: relative;
 }
@@ -357,21 +387,21 @@ h2{
 .brand-box h3 {
     justify-self: center;
     transition: .5s ease;
-    opacity: 0;    
+    opacity: 0;
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     display: flex;
-    align-items: center;   
+    align-items: center;
     font-size: 25px;
     padding: 15px;
-    color: #212121;    
+    color: #212121;
     stroke-width: 1px;
+    filter: drop-shadow(-3px 5px 2px #9b9b9b);
     stroke: black;
     font-family: Arial, Helvetica, sans-serif;
-  
 }
 
 .brand-box :hover .picture{
@@ -399,8 +429,8 @@ h2{
     position: relative;
     opacity: 0;
     transition: .8s ease;
-  
-    
+    These factors, combined with his magnetic personality and larger-than-life persona, have made Michael Jordan an enduring symbol of success, greatness, and dominance in the world of sports and beyond.;
+    margin-bottom: 150px;
 }
 .facts-box:hover #first-pic {
     opacity: 1;
@@ -416,12 +446,12 @@ h2{
     display: flex;
     opacity: 1;
     transition: .4s ease-out;
-    
-    
+    margin-bottom: 150px;
 }
 .facts-box:hover #second-pic{
     transform: translateX(20px) translateY(-20px) rotate(10deg);
     opacity: 0;
+    margin-bottom: 100px;
 } 
 
 .video-frame{
@@ -481,11 +511,71 @@ h2{
     margin-bottom: 200px;
 }
 
+.michael-goat{
+    width: 50%;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+}
+.new-atheletes{
+    display: flex;
+    justify-self: center;
+    justify-content: center;
+}
 
-    
+/*.carousel-wrapper{
+    position: relative;
+    height: 400px;
+}
 
 
 
+.carousel-item{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 25px 50px;
+    opacity: 0;
+    transition: all 0.5s ease-in-out;
+}
+
+.arrow-prev {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 50px;
+    height: 100%;
+    -webkit-tap-highlight-color: #000000;
+    background: url(); 50% 50% / 20px no-repeat;
+
+
+}
+
+ .arrow-next {
+    position: absolute;
+    top: 0;
+    display: block;
+    width: 50px;
+    height: 100%;
+    -webkit-tap-highlight-color: #000000;
+    background: url(); 50% 50% / 20px no-repeat;
+    right: 0;
+    transform: rotate(180deg);
+
+
+ }   
+
+[id^="target-item"] {
+    display: none;
+}
+
+z-index: 2;
+opacity: 1;
+*/
 
 
 
