--- a/Webpages/style.css
+++ b/Webpages/style.css
@@ -1,11 +1,8 @@
 .nav{
-    display: inline;
+    display: f;
     width: 100%;
     transition: 0.5ms;
     margin: 0 0 0 0;
-    
-
-
 }
 
 .nav ul{
@@ -189,9 +186,7 @@ h2{
     justify-content: center;
 
 }
-.homepage-bottom img{
-    
-}
+
 .introduction {
     display: block;
     font-family: Arial, Helvetica, sans-serif;
@@ -289,9 +284,6 @@ h2{
     width: 1200px;
     margin-left: auto;
     margin-right: auto;
-}
-.style-granddad{
-    /* justify-content: space-between; */
 }
 
 .style-dad h3 {
@@ -429,7 +421,7 @@ h2{
     position: relative;
     opacity: 0;
     transition: .8s ease;
-    These factors, combined with his magnetic personality and larger-than-life persona, have made Michael Jordan an enduring symbol of success, greatness, and dominance in the world of sports and beyond.;
+    
     margin-bottom: 150px;
 }
 .facts-box:hover #first-pic {
@@ -446,7 +438,7 @@ h2{
     display: flex;
     opacity: 1;
     transition: .4s ease-out;
-    margin-bottom: 150px;
+    margin-bottom: 1;
 }
 .facts-box:hover #second-pic{
     transform: translateX(20px) translateY(-20px) rotate(10deg);
@@ -480,7 +472,7 @@ h2{
 .qa:hover {
    
     cursor: pointer;
-    box-shadow: ;
+    
     
 }
 
@@ -493,9 +485,6 @@ h2{
     
 }
 
-.questions [open] {
-    
-}
 
 
 .answers{
@@ -503,7 +492,7 @@ h2{
     padding-right: 5%; 
     background-color: rgb(255, 255, 255); 
     
-    box-shadow: ;
+    
 
 }
 
@@ -523,64 +512,6 @@ h2{
     justify-self: center;
     justify-content: center;
 }
-
-/*.carousel-wrapper{
-    position: relative;
-    height: 400px;
-}
-
-
-
-.carousel-item{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 25px 50px;
-    opacity: 0;
-    transition: all 0.5s ease-in-out;
-}
-
-.arrow-prev {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    width: 50px;
-    height: 100%;
-    -webkit-tap-highlight-color: #000000;
-    background: url(); 50% 50% / 20px no-repeat;
-
-
-}
-
- .arrow-next {
-    position: absolute;
-    top: 0;
-    display: block;
-    width: 50px;
-    height: 100%;
-    -webkit-tap-highlight-color: #000000;
-    background: url(); 50% 50% / 20px no-repeat;
-    right: 0;
-    transform: rotate(180deg);
-
-
- }   
-
-[id^="target-item"] {
-    display: none;
-}
-
-z-index: 2;
-opacity: 1;
-*/
-
-
-
-
-
 
 
 
